# joint_tof_opt

./: .env  .gitignore  .venv  pyproject.toml  temp.py  temp.txt
docs/: figure_descriptions.md  functionality.md  plot_codes.md
experiments/: ablation_study.py  best_detector.py  compute_sensitivity.py  compute_sensitivityv2.py  datalength_compare.py  false_fetal_f.py  generate_tof_set.py  hb_pulsation_vis.ipynb  noise_sensitivity_comparison.py  noise_viz.ipynb  optimize_dummy.py  optimize_liu.py  optimize_liu_alt.py  optimize_loop1.py  optimize_loop2.py  optimize_loop3.py  optimize_loop4.py  optimize_loop_boxcar.py  optimize_loop_paper.py  overlap_compare.py  overlap_compare2.py  plot_config.yaml  result_writer.py  run_all_experiments.py  sensitivity_comparison.py  sensitivity_comparison_interactive_vis.ipynb  sensitivity_comparison_vis.py  sensitivity_compute.py  snr_compute.py  tof_config.yaml
plotting_codes/: generate_all_plots.py  plot_ablation_study.py  plot_ablation_study2.py  plot_config.yaml  plot_detector_comparison.py  plot_detector_comparison2.py  plot_false_fetal_f.py  plot_false_fetal_f2.py  plot_flat_top_example.py  plot_impulse_bin_heatmaps.py  plot_noise_sensitivity_comparison.py  plot_noise_sensitivity_comparison2.py  plot_overlap_compare.py  plot_overlap_compare2.py  plot_sample_tof.py  plot_sensitivity_comparison.py  plot_sensitivity_comparison2.py  plot_sensitivity_comparison3.py  plot_sensitivity_comparison4.py  sample_tof_plot.py  time_gating_visual.py
reports/: noise_calc.md  status_update_jan26.md
results/: datalength_compare_results.yaml  detector_comparison_results.npz  detector_comparison_results.yaml  false_fetal_f_results.yaml  false_fetal_f_results2.yaml  loss_histories.npz  noise_sensitivity_comparison_results.yaml  optimized_windows.npz  overlap_comparison_results.yaml  overlap_comparison_results2.yaml  overlap_results.yaml  overlap_results2.yaml  sensitivity_comparison_results.csv  sensitivity_comparison_results.npz  sensitivity_comparison_results.yaml  sensitivity_comparison_results2.yaml  timebin_edges.npz  vanilla_windows.npz  windows_summary.csv
src/joint_tof_opt/: __init__.py  compact_stat_process.py  core.py  metric_process.py  misc.py  noise_calc.py  (+7 more)
test/: test_config.yaml  test_noise_calc.py  test_tof_process.py
visual_debug/: comparing_ideal_to_measurable_metric.ipynb  filtered_signals.ipynb  liu_optimization.ipynb  noise_viz.ipynb  plot_tof.ipynb  plot_tof_noisy.ipynb  sensitivity_viz.ipynb
