[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joint_tof_opt"
version = "0.1.0"
description = "Joint time-of-flight optimization"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "pandas",
    "matplotlib",
    "scipy",
    "cycler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipywidgets",
    "jupyterlab",
]

[tool.setuptools]
packages = ["joint_tof_opt"]

[tool.setuptools.package-dir]
"" = "src"
