[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joint_tof_opt"
version = "0.1.0"
description = "Joint time-of-flight optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "pyyaml",
    "pandas",
    "matplotlib",
    "scipy",
    "cycler",
    "tfo_sim2 @ git+https://github.com/RishadR/tfo_sim2.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ipywidgets",
    "jupyterlab",
]

[tool.setuptools]
packages = ["joint_tof_opt"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
joint_tof_opt = ["*.yaml", "*.yml"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["experiments", "src"]
include = ["src", "experiments"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "experiments"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["joint_tof_opt", "experiments"]
